<?xml version="1.0"?>
<package>
  <name>grasp_execution</name>
  <version>0.0.0</version>
  <description>
    Collection of ROS services and actions to execute a grasp.
  </description>

  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>grasp_execution_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>object_msgs_tools</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>baselib_binding</build_depend>
  <build_depend>arm_components_name_manager</build_depend>
  <build_depend>convenience_math_functions</build_depend>
  <build_depend>convenience_ros_functions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>moveit_planning_helper</build_depend>
  <build_depend>moveit_object_handling</build_depend>
  <build_depend>grasp_planning_graspit_ros</build_depend>

  <run_depend>control_msgs</run_depend>
  <run_depend>grasp_execution_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_msgs</run_depend>
  <run_depend>object_msgs_tools</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>baselib_binding</run_depend>
  <run_depend>arm_components_name_manager</run_depend>
  <run_depend>convenience_math_functions</run_depend>
  <run_depend>convenience_ros_functions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>moveit_planning_helper</run_depend>
  <run_depend>moveit_object_handling</run_depend>
  <run_depend>grasp_planning_graspit_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
