<?xml version="1.0"?>
<package>
  <name>grasp_execution_jaco_tutorial</name>
  <version>0.0.0</version>
  <description>The grasp_execution_jaco_tutorial package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/grasp_execution_jaco_tutorial</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco_on_table</build_depend>
  <build_depend>jaco_joints</build_depend>
  <build_depend>moveit_object_handling</build_depend>
  <build_depend>grasp_execution</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_grasp_plugin</run_depend>
  <run_depend>jaco_on_table</run_depend>
  <run_depend>jaco_joints</run_depend>
  <run_depend>moveit_object_handling</run_depend>
  <run_depend>grasp_execution</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_test_tools</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
